Correcciones de diseño

--- a/src/app/components/general/dynamic-button/dynamic-button.component.scss
+++ b/src/app/components/general/dynamic-button/dynamic-button.component.scss
@@ -256,7 +256,7 @@
   }
 
   // Estado activo/presionado
-  &:active {
+  &:hover {
     transform: translateY(-2px) rotateX(2deg) scale(0.98);
 
     .glitch-overlay {
