Logica principal de loader realizada

--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -9,8 +9,8 @@
 
             <div *ngFor='let project of "FeatureProjects.Projects" | translate; let i = index' class="d-flex proyect-container" data-aos="fade-up" data-aos-duration="1000">
                 <owl-carousel-o class='owl-carousel-o' [options]="customOptions" *ngIf="i%2==0">
-                    <ng-container *ngFor="let img of project.imgs">
-                        <ng-template carouselSlide [id]="project.Title+slide+i">
+                    <ng-container *ngFor="let img of project.imgs; let imgIndex = index">
+                        <ng-template carouselSlide [id]="project.Title+'_slide_'+i+'_'+imgIndex">
                             <div #imgContainer class='img-container'>
                                 <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title">
                             </div>
@@ -45,8 +45,8 @@
                     </div>
                 </div>
                 <owl-carousel-o class='owl-carousel-o' [options]="customOptions" *ngIf="i%2!=0">
-                    <ng-container *ngFor="let img of project.imgs">
-                        <ng-template carouselSlide [id]="project.Title+slide+i">
+                    <ng-container *ngFor="let img of project.imgs; let imgIndex = index">
+                        <ng-template carouselSlide [id]="project.Title+'_slide_'+i+'_'+imgIndex">
                             <div class='img-container'>
                                 <img class='img-feature-proyect rounded' [src]="img" [alt]="project.Title">
                             </div>
