--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<app-header></app-header>
-<!-- <div>
-    <h1> {{"HELLO" | translate}}</h1>
-    <h2>Hola</h2>
-</div> -->
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-splash-screen (animationCompleted)="onSplashAnimationCompleted()"></app-splash-screen>
+
+<div class="app-content" [style.visibility]="appContentVisible ? 'visible' : 'hidden'">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer></app-footer>
+</div>
