--- a/src/app/components/home/banner/banner.component.scss
+++ b/src/app/components/home/banner/banner.component.scss
@@ -22,6 +22,12 @@
         height: 100%;
         object-fit: cover;
         z-index: 1;
+        opacity: 0;
+        transition: opacity 1.2s ease-in-out;
+
+        &.loaded {
+            opacity: 1;
+        }
     }
 
     // Overlay para oscurecer el video
