Migración de @import a @use en archivos SCSS
- Actualización de todos los archivos SCSS para usar sintaxis @use moderna
- Resolución de warnings de deprecación de Sass @import
- Reorganización de imports en styles.scss siguiendo el orden requerido por @use
- Compatibilidad con Dart Sass 3.0.0

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import "./variables.scss";
+@use "./variables" as *;
+@use "bootstrap/scss/bootstrap";
 
 html {
   background-color: $Navy;
@@ -213,5 +214,4 @@ a {
   }
 }
 
-/* Importing Bootstrap SCSS file. */
-@import "bootstrap/scss/bootstrap";
+/* Bootstrap imports moved to top of file */
