--- a/src/app/components/general/header/header.component.scss
+++ b/src/app/components/general/header/header.component.scss
@@ -1,4 +1,4 @@
-@import "./../../../../variables.scss";
+@use "./../../../../variables" as *;
 .main-navbar {
     height: 70px;
     background: transparent;
