--- a/src/app/components/home/banner/banner.component.html
+++ b/src/app/components/home/banner/banner.component.html
@@ -5,7 +5,7 @@
         defaultmuted
         loop
         playsinline
-        preload="metadata"
+        preload="none"
         disablepictureinpicture
         class="banner-video">
         <source src="assets/images/banner-video2.mp4" type="video/mp4">
